# ai-chat-analysis-with-dbt

./: .env.example  .gitignore  Makefile  README.md  config.yml  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: deploy.yml
ai_chat_analysis/: config.py  extract_claude_chat.py  extract_claude_code.py  r2.py  settings.py
dashboard/: evidence.config.yaml
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/ai_chat/: cc_messages.sql  claude_messages.sql  connection.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/raw/: raw_cc_messages.sql  raw_claude_chat.sql
dbt/models/staging/: stg_cc_messages.sql  stg_claude_conversations.sql  stg_claude_messages.sql
launchctl/: com.aebel.sync-claude-code.plist  sync_cc_projects_folder.sh  sync_claude_code.sh
models/marts/: cc_sessions.sql
models/raw/: raw_cc_messages.sql  raw_claude_chat.sql
models/staging/: claude_conversations.sql  claude_messages.sql
notebooks/: claude.ipynb  explore.ipynb
scripts/: com.aebel.sync-claude-code.plist  create_r2_bucket.py  extract.py  extract_claude_chat.py  extract_claude_code.py  sync_cc_projects_folder.py
scripts/sync_cron/: sync_cc_projects_folder.sh
