[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-analysis-with-dbt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "dbt-core>=1.11.0",
    "sqlfluff>=3",
    "boto3",
    "requests",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "jupyter",
    "duckdb",
    "pandas",
    "jupysql",
    "duckdb-engine",
    "toml"
]

[tool.setuptools]
packages = ["ai_chat_analysis"]

[tool.ruff]
line-length = 100
